samples/_failures_safe/1761334550_2ee523_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93ee3c5a.c: In function ‘main’:
./samples/SAFE/__tmp_93ee3c5a.c:161:16: error: missing terminating " character
  161 |         printf("\nMatrix
      |                ^~~~~~~~~
./samples/SAFE/__tmp_93ee3c5a.c:161:9: error: expected expression at end of input
  161 |         printf("\nMatrix
      |         ^~~~~~
./samples/SAFE/__tmp_93ee3c5a.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_93ee3c5a.c:161:9: error: expected declaration or statement at end of input
